[feat] criando funcionalidade de busca profunda para quando não encontrar algum produto, e separando instruções em arquivos melhores para facilitar manutenabilidade e leitura

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,10 @@ Thumbs.db
 /coverage
 /.nyc_output
 
+# Test files (arquivos de teste temporários)
+test-*.js
+compare-*.js
+
 # Temporary files
 *.tmp
 *.temp
