--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.10",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/node-fetch": "^2.6.12",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
